remove background color of login detail and fix z-index and fixed of toolbar

--- a/app/components/login/login.scss
+++ b/app/components/login/login.scss
@@ -9,14 +9,13 @@
     height: calc(100vh - 70px);
   }
 
-  &:before {
+  .detail {
     content: '';
     width: 100%;
     height: 50%;
     position: absolute;
     top: 0;
     left: 0;
-    background: $primary-color;
   }
 
   md-card {
@@ -106,7 +105,7 @@
 }
 
 .login {
-  &:before {
+  .detail {
     animation: enterDetail .7s cubic-bezier(.34,.22,.38,.94)
   }
 
